# KrediPlus

./: README.md
backend/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/src/: config.py  main.py
backend/src/api/routes/: auth_example.py  chat.py  clients.py  credit_simulator.py  credits.py  documents.py  example_usage.py  loan_applications.py  rag_documents.py
backend/src/application/dtos/: chat_dtos.py  client_document_dtos.py  client_dtos.py  credit_dtos.py  credit_simulator_dtos.py  loan_application_dtos.py  rag_document_dtos.py
backend/src/application/services/: auth_service.py  chat_service.py  client_document_service.py  client_service.py  create_loan_application_service.py  credit_service.py  credit_simulator_service.py  list_client_loan_applications_service.py  loan_application_service.py  rag_document_service.py  text_chunking_service.py  update_loan_application_status_service.py
backend/src/application/services/document_processors/: __init__.py  base.py  factory.py  pdf_processor.py  word_processor.py
backend/src/domain/entities/: __init__.py  admin.py  chunk.py  client.py  client_document.py  context_document.py  credit.py  credit_simulator.py  loan_application.py  user.py
backend/src/domain/ports/: __init__.py  admin_repository.py  auth_port.py  auth_service.py  chunk_repository.py  client_document_repository.py  client_repository.py  context_document_repository.py  credit_repository.py  credit_simulator_repository.py  embedding_port.py  llm_port.py  loan_application_repository.py  storage_port.py
backend/src/infrastructure/adapters/: openai_adapter.py
backend/src/infrastructure/adapters/database/: client_document_repository.py  client_repository.py  credit_repository.py  credit_simulator_repository.py  example_usage.py  loan_application_repository.py  models.py
backend/src/infrastructure/inbound/api/middleware/: auth_middleware.py
backend/src/infrastructure/inbound/api/routes/: chat.py  clients.py  credit_simulator.py  credits.py  documents.py  loan_applications.py  rag_documents.py
backend/src/infrastructure/outbound/: openai_adapter.py  supabase_auth_adapter.py  supabase_storage_service.py
backend/src/infrastructure/outbound/database/: chunk_repository.py  connection.py  context_document_repository.py  credit_simulator_repository.py  loan_application_repository.py
backend/tests/: conftest.py
backend/tests/unit/: test_admin_entity.py  test_auth_middleware.py  test_client_document_entity.py  test_client_document_repository.py  test_client_document_service.py  test_client_document_service_full.py  test_client_document_simple.py  test_client_entity.py  test_client_repository.py  test_client_service.py  test_client_service_full.py  test_client_service_simple.py  test_clients_api.py  test_create_loan_application_service.py  test_credit_entity.py  test_credit_repository.py  test_credit_service.py  test_credit_simulator_entity.py  test_credit_simulator_service.py  test_credits_api.py  test_list_client_loan_applications_service.py  test_loan_application_entity.py  test_loan_application_repository.py  test_loan_application_service.py  test_loan_applications_api.py  test_performance.py  test_supabase_auth_adapter.py  test_supabase_storage_service.py  test_user_entity.py
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/layout/: Footer.tsx  app-layout.tsx  site-header.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/data/: admin-clients.ts  admin-requests.ts  simulator-config.ts
frontend/src/features/admin/layout/: admin-tabs.tsx
frontend/src/features/auth/components/: auth-button.tsx  auth-provider.tsx
frontend/src/features/chatbot/api/: chat.ts
frontend/src/features/chatbot/components/: chatbot-widget.tsx
frontend/src/features/chatbot/hooks/: use-chatbot.ts
frontend/src/features/chatbot/types/: chat.ts
frontend/src/features/clients/api/: clients.ts  credits.ts  documents.ts
frontend/src/features/clients/hooks/: use-client-credits.ts  use-client-details.ts  use-client-documents.ts  use-clients-query.ts  use-create-client-credit.ts  use-create-client.ts  (+5 more)
frontend/src/lib/: api-client.ts  supabase.ts
frontend/src/routes/: admin.tsx  index.tsx  root.tsx
frontend/src/store/: auth-store.ts
(+29 files in other folders)
