[project]
name = "KrediPlus_RAG"
version = "0.1.0"
description = "Backend RAG con Supabase Auth y OpenAI"
authors = [
    {name = "JounBrown",email = "vsvrrara@gmail.com"}
]
package-mode = false
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "supabase (>=2.24.0,<3.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pypdf (>=6.3.0,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pyjwt (>=2.8.0,<3.0.0)",
    "httpx (>=0.24.0,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.2.0,<9.0.0)",
    "pytest-asyncio (>=0.25.0)",
    "pytest-mock (>=3.11.0,<4.0.0)",
    "httpx (>=0.24.0,<0.29.0)",
    "black (>=25.11.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest-cov (>=4.0.0,<6.0.0)",
    "psutil (>=7.2.0,<8.0.0)"
]

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "asyncio: mark test as async",
    "slow: mark test as slow running",
    "performance: mark test as performance test"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::RuntimeWarning"
]
# pytest-asyncio configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__pycache__/*",
    "src/*/__pycache__/*",
    "*/__init__.py",
    "src/main.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass"
]
show_missing = true
fail_under = 0

[tool.coverage.html]
directory = "htmlcov"
